--- a/SAVI/SAVI.Android/Properties/AndroidManifest.xml
+++ b/SAVI/SAVI.Android/Properties/AndroidManifest.xml
@@ -1,34 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.celcom.savi" android:installLocation="auto">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="72" android:versionName="2.3.15" package="com.celcom.savi" android:installLocation="auto">
 	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="30" />
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-  <uses-permission android:name="android.permission.FLASHLIGHT" />
-
-  <application android:label="SAVI.Android" android:largeHeap="true" android:screenOrientation="portrait">
-    <provider android:name="android.support.v4.content.FileProvider"
-            android:authorities="${applicationId}.fileprovider"
-            android:exported="false"
-            android:grantUriPermissions="true">
-
-      <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
-                       android:resource="@xml/file_paths"></meta-data>
-
-     
-    </provider>
-
-    <meta-data android:name="com.google.android.gms.vision.DEPENDENCIES"
-                   android:value="ocr"></meta-data>
-
-
-    <meta-data
-       android:name="com.huawei.hms.ml.DEPENDENCY"
-       android:value= "ocr"/>
-    
-  </application>
-
-
+	<uses-permission android:name="android.permission.FLASHLIGHT" />
+	<application android:label="SAVI.Android" android:largeHeap="true" android:screenOrientation="portrait">
+		<provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true">
+			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths"></meta-data>
+		</provider>
+		<meta-data android:name="com.google.android.gms.vision.DEPENDENCIES" android:value="ocr"></meta-data>
+		<meta-data android:name="com.huawei.hms.ml.DEPENDENCY" android:value="ocr" />
+	</application>
 </manifest>
