--- a/SAVI/SAVI.iOS/Info.plist
+++ b/SAVI/SAVI.iOS/Info.plist
@@ -21,17 +21,17 @@
 	<key>MinimumOSVersion</key>
 	<string>12.1</string>
 	<key>CFBundleDisplayName</key>
-	<string>SAVI</string>
+	<string>Mobility</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.celcom.savi</string>
 	<key>CFBundleVersion</key>
-	<string>1.0.8</string>
+	<string>1.0.10</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>CFBundleName</key>
 	<string>SAVI</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.8</string>
+	<string>1.0.10</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Your app accesses the user&apos;s photo library</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
