Registration part correction
Registration part correction

2021-02-17 16:30

--- a/SAVI/SAVI.Android/SAVI.Android.csproj
+++ b/SAVI/SAVI.Android/SAVI.Android.csproj
@@ -44,7 +44,11 @@
     <AndroidSigningStorePass>celcom</AndroidSigningStorePass>
     <AndroidSigningKeyAlias>celcom</AndroidSigningKeyAlias>
     <AndroidSigningKeyPass>celcom</AndroidSigningKeyPass>
-    <AndroidApkSignerAdditionalArguments>celcom</AndroidApkSignerAdditionalArguments>
+    <AndroidApkSignerAdditionalArguments>
+    </AndroidApkSignerAdditionalArguments>
+    <AndroidEnableMultiDex>false</AndroidEnableMultiDex>
+    <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
+    <AndroidDexTool>d8</AndroidDexTool>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>false</DebugSymbols>
