--- a/SAVI/SAVI.Android/SAVI.Android.csproj
+++ b/SAVI/SAVI.Android/SAVI.Android.csproj
@@ -72,6 +72,7 @@
     <AndroidSupportedAbis />
     <AndroidLinkTool>r8</AndroidLinkTool>
     <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
+    <!-- <AndroidPackageFormat>aab</AndroidPackageFormat> -->
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
